--- a/travelapp/templates/travelapp/base.html
+++ b/travelapp/templates/travelapp/base.html
@@ -1,6 +1,13 @@
 <html>
     <head>
         <title>{% block title %}{% endblock %}</title>
+
+        <!-- UIkit CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.15.23/dist/css/uikit.min.css" />
+
+        <!-- UIkit JS -->
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.23/dist/js/uikit.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.23/dist/js/uikit-icons.min.js"></script>
     </head>
     <body>
         <nav>
