--- a/travelapp/templates/travelapp/base.html
+++ b/travelapp/templates/travelapp/base.html
@@ -5,23 +5,35 @@
         <!-- UIkit CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.15.23/dist/css/uikit.min.css" />
 
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
         <!-- UIkit JS -->
         <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.23/dist/js/uikit.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.23/dist/js/uikit-icons.min.js"></script>
+        
     </head>
     <body>
-        <nav>
-            <ul>
-                <li><a href='/'>Home</a></li>
-                <li><a href='{% url 'newpost' %}'>New Post</a></li>
-                <li><a href='{% url 'user_register' %}'>User Area</a></li>
-                {% if user.is_authenticated %}
-                <li><a href='{% url 'user_profile' user.username %}'>{{ user.username }}</a> <a href='{% url 'user_logout' %}'>Log out</a></li>
-                {% endif %}
-            </ul>
+        <nav class="uk-navbar-container">
+            <div class="uk-container">
+                <div class="uk-navbar-left">
+                    <ul class="uk-navbar-nav">
+                        <li><a href='/'>Home</a></li>
+                        <li><a href='{% url 'newpost' %}'>New Post</a></li>
+                        <li><a href='{% url 'user_register' %}'>User Area</a></li>
+                        {% if user.is_authenticated %}
+                        <li><a href='{% url 'user_profile' user.username %}'>{{ user.username }}</a></li>
+                        <li>
+                            <a href='{% url 'user_logout' %}'>Log out</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
         </nav>
-        <div id="content">
-            {% block content %}{% endblock %}
+        <div class="uk-container">
+            <div id="content">
+                {% block content %}{% endblock %}
+            </div>
         </div>
+        {% block custom_script %}{% endblock %}
     </body>
 </html>
