--- a/travelapp/templates/travelapp/login.html
+++ b/travelapp/templates/travelapp/login.html
@@ -3,9 +3,19 @@
 {% block title %} Login {% endblock %}
 
 {% block content %}
-<form action="/login/" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit">
-</form>
+<div class="uk-flex uk-flex-center">
+    <form action="/login/" method="post" class="uk-form-horizontal uk-margin">
+        {% csrf_token %}
+        {{ form.as_div }} 
+        <input type="submit" value="Submit">
+    </form>
+</div>
+{% endblock %}
+
+{% block custom_script %}
+<script>
+    $('form > div').addClass('uk-margin-small');
+    $('input').addClass('uk-input').wrap('<div class="uk-form-controls"></div>'); 
+    $('label').addClass('uk-form-label')
+</script>
 {% endblock %}
