--- a/travelapp/templates/travelapp/register.html
+++ b/travelapp/templates/travelapp/register.html
@@ -3,10 +3,20 @@
 {% block title %} New user {% endblock %}
 
 {% block content %}
-    Already have an account? <a href='{% url 'user_login' %}'>Log in</a>
-    <form action="/register/" method="post">
+<div class="uk-flex uk-flex-center">
+    <form action="/register/" method="post" class="uk-form-horizontal uk-margin">
         {% csrf_token %}
-        {{ form }}
-    <input type="submit" value="Submit">
-</form>
+        {{ form }} 
+        <input type="submit" value="Submit">
+        Already have an account? <a href="{% url 'user_login' %}">Log in</a>
+    </form>
+</div>
+{% endblock %}
+
+{% block custom_script %}
+<script>
+    $('input').addClass('uk-input').wrap('<div class="uk-form-controls"></div>'); 
+    $('.helptext').remove();
+    $('label').addClass('uk-form-label')
+</script>
 {% endblock %}
